natgateway.tf
resource "aws_eip" "nat_eip" {
    domain = "vpc"
    depends_on = [ aws_internet_gateway.ig ]
    tags = merge(var.tags, 
    {
        Name = format("%s-EIP", var.name)
    })
  
}

resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat_eip.id
    subnet_id = element(aws_subnet.public_subnet.*.id,0)
    depends_on = [ aws_internet_gateway.ig ]
    tags = merge( 
        var.tags, 
        {name =format("%s-nat", var.name)},
    )
  
}
